# myfiles

Onsite_Parking_init/: requirements.txt
Onsite_Parking_init/input/: A.json  B01.json  B01_dyobs.json  B02_dyobs.json  B03_dyobs.json  make_car.py  make_map.py
Onsite_Parking_init/output/: result_B03_3.json
Onsite_Parking_init/planner/: test_run.py  user_run.py
control_program_deliver/: Dynamics_model.py  K.txt  Kinematics_model.py  README.md  generate_path.py  lqr_lat.py  main.py  pid_lon.py  target_list_2024-10-21_14_49_29.txt  target_list_2024-10-29_15_16_33.txt  visual.py
fmq_5.30/fengmq_pybind_ilqr_planner-fmq-change_terminal_cost/: CMakeLists.txt
fmq_5.30/fengmq_pybind_ilqr_planner-fmq-change_terminal_cost/fengmq_sim/: fengmq_sim.py  map.csv  test_draw.py
fmq_5.30/fengmq_pybind_ilqr_planner-fmq-change_terminal_cost/global_planner/: Node.py  global_planner.py  map.py
fmq_5.30/fengmq_pybind_ilqr_planner-fmq-change_terminal_cost/ilqr_lib/: CMakeLists.txt
fmq_5.30/fengmq_pybind_ilqr_planner-fmq-change_terminal_cost/ilqr_lib/inc/: bound_constraint.h  constraint.h  ilqr_core.h  ilqr_cost.h  ilqr_define.h  ilqr_math_utils.h  ilqr_model.h  line_segment2d.h
fmq_5.30/fengmq_pybind_ilqr_planner-fmq-change_terminal_cost/ilqr_lib/src/: ilqr_core.cpp  ilqr_cost.cpp
fmq_5.30/fengmq_pybind_ilqr_planner-fmq-change_terminal_cost/planning_core/inc/: ilqr_planner.h  ilqr_planner_data.h  math_utils.h
fmq_5.30/fengmq_pybind_ilqr_planner-fmq-change_terminal_cost/planning_core/src/: ilqr_planner.cpp  test.cpp
fmq_5.30/fengmq_pybind_ilqr_planner-fmq-change_terminal_cost/proto/: ilqr_config.proto  ilqr_data.proto  plan_common.proto  virtual_lane_smooth.proto
fmq_5.30/fengmq_pybind_ilqr_planner-fmq-change_terminal_cost/proto_data/: hybrid_astar_params.pb.txt  ilqr_params.pb.txt
fmq_5.30/fengmq_pybind_ilqr_planner-fmq-change_terminal_cost/pybind_cpp/: pybind_test.cpp
fmq_5.30/test_vehicle_planner_kappa_v_limit-fmq-250227/: CMakeLists.txt  test.cc
fmq_5.30/test_vehicle_planner_kappa_v_limit-fmq-250227/proto/: CMakeLists.txt  speed_planner_config.proto  speed_planner_msg.proto
fmq_5.30/test_vehicle_planner_kappa_v_limit-fmq-250227/proto_data/: speed_planner_config.pb.txt
fmq_5.30/test_vehicle_planner_kappa_v_limit-fmq-250227/sim/: Car.py  MPC.py  P.py  Planner.py  Reference_line.py  change_lane_sample.txt  draw.py  main.py
fmq_5.30/test_vehicle_planner_kappa_v_limit-fmq-250227/speed_planner/: piecewise_jerk_path_problem.cc  piecewise_jerk_path_problem.h  piecewise_jerk_problem.cc  piecewise_jerk_problem.h  piecewise_jerk_speed_nonlinear_ipopt_interface.cc  piecewise_jerk_speed_nonlinear_ipopt_interface.h  piecewise_jerk_speed_nonlinear_optimizer.cc  piecewise_jerk_speed_nonlinear_optimizer.h  piecewise_jerk_speed_problem.cc  piecewise_jerk_speed_problem.h  piecewise_jerk_trajectory1d.cc  piecewise_jerk_trajectory1d.h
fmq_5.30/test_vehicle_planner_kappa_v_limit-fmq-250227/speed_planner/common/: constant_jerk_trajectory1d.cc  constant_jerk_trajectory1d.h  discretized_path.cc  discretized_path.h  linear_interpolation.cc  linear_interpolation.h  math_utils.cc  math_utils.h  path_data.cc  path_data.h  speed_limit.cc  util.h  vec2d.cc  vec2d.h
fmq_5.30/test_vehicle_planner_kappa_v_limit-fmq-250227/speed_planner_pybind/: speed_planner_pybind.cc
new_control1_0830-小车算法/: K.txt  K1.txt  K2.txt  K_origin.txt  README.en.md  README.md  RobotPi.ini  lqr_controller.py  main.py  main_with_outside.py  stanley.py  stanleycontrol.py  straight_controller.py  test.txt  trajeo.txt  trajeo1.txt  trajeo_08081305.txt  trajeo_normal.txt  tt.py
new_control1_0830-小车算法/log/: log20240808_181707.txt  log20240808_182100.txt  log20240808_182601.txt  log20240808_184144.txt  log20240808_184313.txt  log20240809_111233.txt  log20240809_111352.txt  log20240809_112816.txt  log20240809_114026.txt  log20240809_115442.txt  log20240809_115526.txt  log20240809_120859gooood.txt  log20240809_121256.txt  log20240809_130545.txt  log20240809_130911.txt  log20240809_130956.txt  log20240809_131207.txt  log20240809_131548.txt  log20240809_131726.txt  (+6 more)
(+2 files in other folders)
